--- a/src/test/resources/services-local.conf
+++ b/src/test/resources/services-local.conf
@@ -3,25 +3,22 @@
 
 # This file is read when runLocal = true in application.conf (default)
 
-# For local development convenience, host and protocol will have the following defaults:
-#      protocol = http
-#      host = localhost
-
-# Example 1: (the base url for helloworld-service is https://127.0.0.1:9000)
-# helloworld-service {
-#      protocol = https
-#      host = 127.0.0.1
-#      port = 9000
-# }
-
-# Example 2: (the base url for helloworld-service is http://localhost:9000)
-# helloworld-service.port = 9000
-
-
 services {
-    example-frontend{
-      protocol = http
-      host = localhost
-      port = 9080
-    }
+
+    one-login-gateway.port = 12002
+
+    one-login-gateway-frontend.port = 12001
+    one-login-stub.port = 12000
+
+    account-context-fixer.port = 12007
+    account-context-fixer-frontend.port = 12008
+
+    identity-provider-account-context.port = 12005
+
+    # demo ca frontend
+    centralised-auth-frontend.port = 15009
+
+    centralised-authorisation-server-frontend.port = 15001
+
+    identity-provider-gateway-frontend.port = 15020
 }
