--- a/src/test/resources/services.conf
+++ b/src/test/resources/services.conf
@@ -3,25 +3,60 @@
 
 # This file is read when runLocal = false in application.conf (default is false)
 
-# For local development convenience, host and protocol will have the following defaults:
-#      protocol = http
-#      port = 8080
-
-# Example 1: (the base url for helloworld-service is https://internal.helloworld-service.co.uk:9000)
-# helloworld-service {
-#      protocol = https
-#      host = internal.helloworld-service.co.uk
-#      port = 9000
-# }
-
-# Example 2: (the base url for helloworld-service is http://internal.helloworld-service.co.uk:8080)
-# helloworld-service.host = internal.helloworld-service.co.uk
-
-
 services {
-  example-frontend{
+
+  account-context-fixer {
+    protocol = https
+    host = account-context-fixer.protected.mdtp
+    port = 443
+  }
+
+  account-context-fixer-frontend {
     protocol = https
     host = www.staging.tax.service.gov.uk
     port = 443
   }
+
+  identity-provider-account-context {
+   protocol = https
+   host = identity-provider-account-context.protected.mdtp
+   port = 443
+  }
+
+  one-login-gateway {
+    protocol = https
+    host = one-login-gateway.protected.mdtp
+    port = 443
+  }
+
+  one-login-gateway-frontend {
+    protocol = https
+    host = www.staging.tax.service.gov.uk
+    port = 443
+  }
+
+  one-login-stub {
+    protocol = https
+    host = www.staging.tax.service.gov.uk
+    port = 443
+  }
+
+  centralised-auth-frontend {
+    protocol = https
+    host = www.staging.tax.service.gov.uk
+    port = 443
+  }
+
+  centralised-authorisation-server-frontend {
+    protocol = https
+    host = www.staging.tax.service.gov.uk
+    port = 443
+  }
+
+  identity-provider-gateway-frontend {
+    protocol = https
+    host = www.staging.tax.service.gov.uk
+    port = 443
+  }
+
 }
