--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,36 +1,43 @@
 # Copyright 2023 HM Revenue & Customs
 #
 
-# Configures the test to run locally. The default value is true.
-# When true, services-local.conf file is used. When false, services.conf is used
-#runLocal = false
+# The default url for every service.
+# For example
+# ServicesConfiguration.baseUrlFor("helloworld-service") == https://helloworld-service.co.uk
+baseUrl = "https://www.staging.tax.service.gov.uk"
+
+
+# The baseUrl can be overridden in services-local.conf. See that file for more information
+# That file is ignored when the test is not run locally. The default is true
+ runLocal = true
+
 
 perftest {
 
   # All journeys will run with the following phases and times.
 
-  # 1. an inital ramp up phase
-  #rampupTime = 1
+  # 1. an inital ramp up phase (minutes)
+  rampupTime = 1
 
-  # 2. a usually longer phase with a constant rate
-  #constantRateTime = 5
+  # 2. a usually longer phase with a constant rate  (minutes)
+  constantRateTime = 5
 
-  # 3. a final ramp down phase
-  #rampdownTime = 1
+  # 3. a final ramp down phase  (minutes)
+  rampdownTime = 1
 
   # The load percentage allows to specify at what percentage of the load set in the journey (journeys.conf) this test has to run.
   # Examples:
   # 1. if the journey load is 10 jps and the loadPercentage is 60, the test will run at 6 jps
   # 2. if the journey load is 10 jps and the loadPercentage is 150, the test will run at 15 jps
-  #loadPercentage = 100
+  loadPercentage = 100
 
   # To run a smoke test through all journeys, with one user only, set the following.
   # All load configurations will be ignored.
-  #runSmokeTest=true
+  runSmokeTest=true
 
   # Percentages of failing journeys required for a test-run to fail
-  #percentageFailureThreshold = 1
+  percentageFailureThreshold = 1
 
   # Percentage of individual requests failing for a test-run to fail
-  #requestPercentageFailureThreshold = 1
+  requestPercentageFailureThreshold = 1
 }
