--- a/src/test/resources/journeys.conf
+++ b/src/test/resources/journeys.conf
@@ -5,37 +5,36 @@
 
 journeys {
 
-  # Example
-  # Give a name to the journey.
-  example-journey = {
-
-    # The description will appear in the test report. Use something meaningful
-    description = "Example journey"
-
-    # The load is in journeys per second. Put here the load you are going to have at the peak.
-    # There is no need to put a higher value at this point. Use prerftest.loadPercentage in application.conf instead
-    load = 9.1
-
-    # This points to a csv file with the data you need to inject in the journey. [More here](https://github.com/hmrc/performance-test-runner#step-4-configure-the-user-feeder)
-    feeder = data/example.csv
-
-    # The parts your journey is made of. A part is made one or more requests.
+  one-login-authn-journey = {
+    description = "Testing the account creation/login user journey"
+    load = 1  # journeys per second
     parts = [
-      home-page,
-      post-vat-return-period,
-      get-turnover-page
+        one-login-authn
     ]
   }
 
+   one-login-iv-journey = {
+     description = "Testing the GDS IV user journey"
+     load = 1  # journeys per second
+     parts = [
+         one-login-iv
+     ]
+   }
+
+   api-logout = {
+     description = "Testing the api for logout"
+     load = 1  # journeys per second
+     parts = [
+         api-logout
+     ]
+   }
+
+ front-channel-logout = {
+   description = "Testing front channel logout"
+   load = 1
+   parts = [
+       front-channel-logout
+   ]
+ }
+
 }
-
-
-# Default behaviour is to run all journeys. If that is not what you need you can specify the list of journeys to run
-#journeysToRun = [
-#   hello-world-1,
-#   hello-world-3
-#]
-
-# You can specify the same list of journeys via environment variables:
-# journeysToRun.0 = hello-world-1
-# journeysToRun.1 = hello-world-3
