--- a/src/test/resources/journeys.conf
+++ b/src/test/resources/journeys.conf
@@ -37,4 +37,12 @@ journeys {
    ]
  }
 
+ reauth-journeys = {
+     description = "login ReAuth user journey"
+     load = 1  # journeys per second
+     parts = [
+         reauth-journeys
+     ]
+   }
+
 }
