--- a/src/test/resources/services-local.conf
+++ b/src/test/resources/services-local.conf
@@ -30,9 +30,8 @@
 
 
 services {
-    example-frontend{
-      protocol = http
-      host = localhost
-      port = 9080
-    }
+        one-login-stub.port = 12000
+
+        centralised-authorisation-demo.port = 15009
+
 }
