--- a/src/test/resources/services.conf
+++ b/src/test/resources/services.conf
@@ -13,9 +13,57 @@
 # limitations under the License.
 
 services {
-  example-frontend{
-    protocol = https
-    host = www.staging.tax.service.gov.uk
-    port = 443
-  }
+  account-context-fixer {
+      protocol = https
+      host = account-context-fixer.protected.mdtp
+      port = 443
+    }
+
+    account-context-fixer-frontend {
+      protocol = https
+      host = www.staging.tax.service.gov.uk
+      port = 443
+    }
+
+    identity-provider-account-context {
+     protocol = https
+     host = identity-provider-account-context.protected.mdtp
+     port = 443
+    }
+
+    one-login-gateway {
+      protocol = https
+      host = one-login-gateway.protected.mdtp
+      port = 443
+    }
+
+    one-login-gateway-frontend {
+      protocol = https
+      host = www.staging.tax.service.gov.uk
+      port = 443
+    }
+
+    one-login-stub {
+      protocol = https
+      host = www.staging.tax.service.gov.uk
+      port = 443
+    }
+
+    centralised-auth-frontend {
+      protocol = https
+      host = www.staging.tax.service.gov.uk
+      port = 443
+    }
+
+    centralised-authorisation-server-frontend {
+      protocol = https
+      host = www.staging.tax.service.gov.uk
+      port = 443
+    }
+
+    identity-provider-gateway-frontend {
+      protocol = https
+      host = www.staging.tax.service.gov.uk
+      port = 443
+    }
 }
