--- a/src/test/resources/services.conf
+++ b/src/test/resources/services.conf
@@ -25,6 +25,12 @@ services {
       port = 443
     }
 
+    centralised-authorisation-demo {
+          protocol = https
+          host = www.staging.tax.service.gov.uk
+          port = 443
+        }
+
     identity-provider-account-context {
      protocol = https
      host = identity-provider-account-context.protected.mdtp
