update interact ref/CA redirect calls and dependencies

--- a/src/test/resources/services-local.conf
+++ b/src/test/resources/services-local.conf
@@ -17,4 +17,6 @@ services {
 
         centralised-authorisation-canary-frontend.port = 15009
 
+        identity-provider-gateway-frontend = 15020
+
 }
