--- a/src/test/resources/services.conf
+++ b/src/test/resources/services.conf
@@ -26,4 +26,10 @@ services {
       port = 443
     }
 
+    identity-provider-gateway-frontend {
+      protocol = https
+      host = www.staging.tax.service.gov.uk
+      port = 443
+    }
+
 }
