add base urls to tackle staging location header differences

--- a/src/test/resources/services-local.conf
+++ b/src/test/resources/services-local.conf
@@ -17,6 +17,8 @@ services {
 
         centralised-authorisation-canary-frontend.port = 15009
 
-        identity-provider-gateway-frontend = 15020
+        centralised-authorisation-server-frontend.port = 15001
+
+        identity-provider-gateway-frontend.port = 15020
 
 }
