--- a/src/test/resources/services.conf
+++ b/src/test/resources/services.conf
@@ -32,4 +32,10 @@ services {
       port = 443
     }
 
+    centralised-authorisation-server-frontend {
+      protocol = https
+      host = www.staging.tax.service.gov.uk
+      port = 443
+    }
+
 }
